[package]
name = "precompute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
puruspe = "0.2.0"
image = "0.24.5"
lazy_static = "1.4.0"
tiff = "0.9.0"
rayon = "1.7.0"
rfd = "0.11.2"
clap = { version = "4.1.11", features = ["derive"] }
